@@ -165,6 +165,7 @@
 
     Event Console:
     * FIX: fix icon in events check if host specification is by IP address
+    * Renamed "Delete Event" to "Archive Event" to clearify the meaning
 
 1.2.2p1:
     Core:
